fix background height on mobile

--- a/styles/_core.scss
+++ b/styles/_core.scss
@@ -1,9 +1,10 @@
+html{height: 100%;}
 body{
     margin: 0; padding: 0;
     background: #fff;
 
     display: flex;
-    height: 100vh;
+    height: 100%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
